--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,9 @@
                 "DrawVn.C": "cpp",
                 "TH1toCanvas.C": "cpp",
                 "TH1DtoCanvas.C": "cpp",
-                "Statistics.C": "cpp"
+                "Statistics.C": "cpp",
+                "QA.C": "cpp",
+                "TGEtoCanvas.C": "cpp",
+                "Vn.C": "cpp"
         }
 }
