--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
                 "Vn.C": "cpp",
                 "Run2Vn.C": "cpp",
                 "DrawVn4eta.C": "cpp",
-                "makeBkg_for_highMult_jets.C": "cpp"
+                "makeBkg_for_highMult_jets.C": "cpp",
+                "neueBinsProbier.C": "cpp",
+                "VnvsEta.C": "cpp"
         }
 }
